# lau-eigenfunction-policy

./: AGENT.md  Cargo.toml  README.md
memory/: JOURNAL.md
src/: dirichlet.rs  doob.rs  eigen.rs  hopf_cole.rs  lib.rs  linear_mdp.rs  policy.rs  spectral.rs  wkb.rs
