[package]
name = "lau-eigenfunction-policy"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/SuperInstance/lau-eigenfunction-policy"
description = "Optimal RL policy as Dirichlet eigenfunction — solve RL via eigenvalues, not Bellman iteration"

[dependencies]
nalgebra = { version = "0.33", features = ["serde-serialize"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
approx = "0.5"
